# translate

./: .coveragerc  .deepsource.toml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .typos.toml  AGENTS.md  CNAME  CONTRIBUTING.md  CREDITS  ChangeLog  LICENSES  MANIFEST.in  Makefile  ProjectManagement.docx  README  README.rst  RELEASE.rst  REUSE.toml  _config.yml  _typos.toml  appveyor.yml  discover.html  download.html  index.html  min-required.txt  pootlesetup.py  pootlingsetup.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  ~$ojectManagement.docx
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  release.yml  renovate.json
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  linux.yml  osx.yml  pre-commit.yml  pylint.yml  setup.yml  test-qemu.yml  test.yml  tests.yml  ty.yml  win.yml
LICENSES/: LicenseRef-OASIS.txt  LicenseRef-Public-Domain.txt
_data/: release.yml
_layouts/: default.html
_posts/: 2013-03-12-Translate-Toolkit-1.10.0-released.md  2013-11-28-Translate-Toolkit-1.11.0-released.md  2014-01-22-Translate-Toolkit-1.11.0-released.md  2014-07-14-Translate-Toolkit-1.12.0-rc1-released.md  2014-08-12-Translate-Toolkit-1.12.0-released.md  2015-05-13-Translate-Toolkit-1.13.0-released.md  2016-03-08-Translate-Toolkit-1.14.0-rc1-released.md  2016-05-05-Translate-Toolkit-2.0.0b1-released.md  2016-05-13-Translate-Toolkit-2.0.0b2-released.md  2016-07-19-Translate-Toolkit-2.0.0b3-released.md  2016-08-09-Translate-Toolkit-2.0.0b4-released.md  2016-08-30-Translate-Toolkit-2.0.0b5-released.md  2016-09-30-Translate-Toolkit-2.0.0b6-released.md  2016-11-02-Translate-Toolkit-2.0.0b7-released.md  2017-01-05-Translate-Toolkit-2.0.0rc1-released.md  2017-01-12-Translate-Toolkit-2.0.0rc2-released.md  2017-01-23-Translate-Toolkit-2.0.0rc3-released.md  2017-01-27-Translate-Toolkit-2.0.0-released.md  2017-03-17-Translate-Toolkit-2.1.0-released.md  2017-06-15-Translate-Toolkit-2.2.0-released.md  2017-06-20-Translate-Toolkit-2.2.2-released.md  2017-06-20-Translate-Toolkit-2.2.3-released.md  2017-07-31-Translate-Toolkit-2.2.4-released.md  2017-09-01-Translate-Toolkit-2.2.5-released.md  2018-03-18-Translate-Toolkit-2.3.0-released.md  2018-10-06-Translate-Toolkit-2.3.1-released.md  2019-06-24-Translate-Toolkit-2.4.0-released.md  2020-01-18-Translate-Toolkit-2.5.0-released.md  2020-04-25-Translate-Toolkit-2.5.1-released.md  2020-06-15-Translate-Toolkit-3.0.0-released.md  2020-09-21-Translate-Toolkit-3.1.0-released.md  2020-09-23-Translate-Toolkit-3.1.1-released.md  2020-11-04-Translate-Toolkit-3.2.0-released.md  2021-01-04-Translate-Toolkit-3.3.0-released.md  2021-01-29-Translate-Toolkit-3.3.1-released.md  2021-02-05-Translate-Toolkit-3.3.2-released.md  2021-03-02-Translate-Toolkit-3.3.3-released.md  2021-04-02-Translate-Toolkit-3.3.4-released.md  2021-04-27-Translate-Toolkit-3.3.5-released.md  2021-04-29-Translate-Toolkit-3.3.6-released.md  (+71 more)
assets/css/: site.css
assets/font/: LICENSE.md
docs/: Makefile  ProjectManagement (1).docx  ProjectManagement.docx  README  changelog.rst  conf.py  contents.rst.inc  epydoc-config.ini  features.rst  gen_api_docs.sh  history.rst  index.html  index.rst  installation.rst  license.rst  styleguide.rst
docs/_ext/: translate_docs.py
docs/api/: convert.rst  filters.rst  index.html  index.rst  misc.rst  search.rst  storage.rst  tools.rst
docs/commands/: android2po.rst  arb2po.rst  asciidoc2po.rst  csv2po.rst  csv2tbx.rst  flatxml2po.rst  fluent2po.rst  general_usage.rst  html2po.rst  ical2po.rst  index.rst  ini2po.rst  json2po.rst  junitmsgfmt.rst  l20n2po.rst  levenshtein_distance.rst  md2po.rst  mdx2po.rst  moz-l10n-builder.rst  moz2po.rst  mozilla_l10n_scripts.rst  mozlang2po.rst  odf2po.rst  odf2xliff.rst  oo2po.rst  option_accelerator.rst  option_duplicates.rst  option_errorlevel.rst  option_filteraction.rst  option_multifile.rst  option_personality.rst  option_progress.rst  option_psyco.rst  option_rewrite.rst  phase.rst  php2po.rst  po2tmx.rst  po2wordfast.rst  poclean.rst  pocommentclean.rst  (+37 more)
docs/developers/: contributing.rst  deprecation.rst  developers.rst  releasing.rst  reporting_bugs.rst  styleguide.rst  testing.rst
docs/development/: building.rst  contributing.rst  developers.rst  styleguide.rst  testing.rst
docs/formats/: android.rst  asciidoc.rst  base_classes.rst  catkeys.rst  conformance.rst  csv.rst  dtd.rst  flatxml.rst  flex.rst  fluent.rst  gsi.rst  html.rst  ical.rst  index.rst  ini.rst  json.rst  l20n.rst  md.rst  mdx.rst  mo.rst  mozilla_lang.rst  odf.rst  omegat_glossary.rst  php.rst  po.rst  properties.rst  qm.rst  qt_phrase_book.rst  quoting_and_escaping.rst  rc.rst  resx.rst  strings.rst  stringsdict.rst  subtitles.rst  tbx.rst  text.rst  tmx.rst  toml.rst  ts.rst  utx.rst  (+6 more)
docs/guides/: checking_for_inconsistencies.rst  cleanup_translator_comments.rst  creating_a_terminology_list_from_your_existing_translations.rst  creating_mozilla_pot_files.rst  document_translation.rst  index.rst  migrating_to_firefox.rst  migrating_translations.rst  running_the_tools_on_microsoft_windows.rst  using_csv2po.rst  using_oo2po.rst  using_pofilter.rst
docs/releases/: 0.10.1.rst  0.10.rst  0.11.rst  0.7.1.rst  0.8.rst  0.9.1.rst  0.9.2.rst  0.9.rst  1.0.1.rst  1.0.rst  (+143 more)
editor/: CHANGELOG.TXT  MainEditor.py  README.TXT  TODO  pootling.py  poxole.py
po/: POTFILES.in
pootling/: CHANGELOG.TXT  README.TXT  TODO  __version__.py  createpootlingpot  pootling-editor.py  pootling.pro
release/: RELEASE-NOTES-1.10.0.rst
requirements/: base.txt  dev.txt  dist.txt  docs.txt  lint.txt  min-versions.txt  optional-py2.txt  optional.txt  recommended.txt  required.txt  test.txt
share/: stoplist-en
tests/: conftest.py
tools/: __init__.py  benchmark.py  bugdaytest  buildxpi.py  get_moz_enUS.py  moz-l10n-builder  moz-l10n-builder.py  moz_l10n_builder.py  mozcronbuild.py  pep8.sh  phase  phaselist2goals  pocommentclean  pocompendium  poglossary  pomigrate2  popuretext  poreencode  posplit
translate/: __init__.py  __version__.py  i18n.py
translate_toolkit/: __init__.py
(+1492 files in other folders)
