[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm>=6.2"
]

[tool.isort]
known_third_party = [
  "iniparse",
  "lxml",
  "vobject",
  "sphinx",
  "pytest",
  "cheroot",
  "phply",
  "bs4",
  "ruamel",
  "pyparsing",
  "setuptools"
]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-safe-fixes = [
  "FURB113",
  "TCH003",
  "PLC2801"
]
# CONFIG - intentional configuration
# TODO - needs decision whether intention, add noqa tags or fix
# WONTFIX - not fixable in current codebase, might be better to go for noqa
ignore = [
  "PT013",  # TODO: Found incorrect import of pytest, use simple `import pytest` instead
  "PT009",  # TODO: Use a regular `assert` instead of unittest-style `assertCountEqual`
  "PLW1510",  # TODO: `subprocess.run` without explicit `check` argument
  "SLOT000",  # TODO: Subclasses of `str` should define `__slots__`
  "B028",  # TODO: No explicit `stacklevel` keyword argument found
  "B006",  # TODO: Do not use mutable data structures for argument defaults
  "PLR0913",  # TODO: Too many arguments in function definition
  "PERF203",  # TODO: `try`-`except` within a loop incurs performance overhead
  "ERA001",  # TODO: Found commented-out code
  "SIM115",  # TODO: Use context handler for opening files
  "E741",  # TODO: Ambiguous variable name:
  "B007",  # TODO: Loop control variable not used within loop body
  "B020",  # TODO: Loop control variable `node` overrides iterable it iterates
  "PLW2901",  # TODO: `for` loop variable `input_unit` overwritten by assignment target
  "TD004",  # TODO: Missing colon in TODO
  "TD005",  # TODO: Missing issue description after `TODO`
  "TD007",  # TODO: Missing space after colon in TODO
  "SLF001",  # TODO: Private member accessed
  "RUF012",  # TODO: Mutable class attributes should be annotated with `typing.ClassVar`
  "TRY003",  # WONTFIX: Avoid specifying long messages outside the exception class
  "SIM102",  # TODO: Use a single `if` statement instead of nested `if` statements
  "ANN",  # TODO: type annotations missing
  "COM",  # CONFIG: No trailing commas
  "DTZ005",  # TODO: The use of `datetime.datetime.now()` without `tz` argument is not allowed
  "D1",  # TODO: Missing docstring
  "PT011",  # TODO: `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  "D205",  # TODO: 1 blank line required between summary line and description
  "D401",  # TODO: First line of docstring should be in imperative mood
  "D404",  # TODO: First word of the docstring should not be "This"
  "D203",  # CONFIG: incompatible with D211
  "D212",  # CONFIG: incompatible with D213
  "B904",  # TODO: Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
  "BLE001",  # WONTFIX: Do not catch blind exception: `Exception`, third-party modules do not have defined exceptions
  "ARG001",  # TODO: Unused function argument (mostly for API compatibility)
  "ARG002",  # TODO: Unused method argument (mostly for API compatibility)
  "ARG004",  # TODO: Unused static method argument
  "ARG005",  # TODO: Unused lambda argument:
  "TD002",  # CONFIG: no detailed TODO documentation is required
  "TD003",  # CONFIG: no detailed TODO documentation is required
  "S404",  # TODO: `subprocess` module is possibly insecure
  "S403",  # TODO: `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
  "S408",  # TODO: `xml.dom.minidom` is vulnerable to XML attacks
  "S407",  # TODO: `xml.dom.expatbuilder` is vulnerable to XML attacks
  "S603",  # CONFIG: `subprocess` call: check for execution of untrusted input
  "S607",  # CONFIG: executing system installed tools
  "PD011",  # WONTFIX: Use `.to_numpy()` instead of `.values
  "FIX001",  # TODO: Line contains FIXME, consider resolving the issue
  "FIX002",  # CONFIG: we use TODO
  "S101",  # CONFIG: Use of `assert` detected
  "FIX003",  # TODO: Line contains XXX, consider resolving the issue
  "TD001",  # TODO: Invalid TODO tag: `FIXME`
  "FIX004",  # TODO: Line contains HACK, consider resolving the issue
  "N801",  # TODO: Class name should use CapWords convention
  "N802",  # TODO: Function name `FAIL` should be lowercase
  "N803",  # TODO: Argument name `attributeValue` should be lowercase
  "N806",  # TODO: Variable `sourcelanguageNode` in function should be lowercase
  "N813",  # TODO: Camelcase `StateEnum` imported as lowercase `state`
  "N815",  # TODO: Variable `bodyNode` in class scope should not be mixedCase
  "N816",  # TODO: Variable `theDOMImplementation` in global scope should not be mixedCase
  "N818",  # TODO: Exception name `FilterFailure` should be named with an Error suffix
  "PLR2004",  # TODO: Magic value used in comparison, consider replacing with a constant variable
  "PLR0911",  # TODO: Too many return statements
  "PLR0912",  # TODO: Too many branches
  "PLR0915",  # TODO: Too many statements
  "C901",  # TODO: too complex
  "FBT",  # TODO: Boolean in function definition
  "EM",  # TODO: Exception strings
  "E501",  # WONTFIX: we accept long strings (rest is formatted by black)
  "RUF001",  # WONTFIX: String contains ambiguous unicode character, we are using Unicode
  "RUF002",  # WONTFIX: Docstring contains ambiguous
  "RUF003",  # WONTFIX: Comment contains ambiguous
  "A001",  # TODO: Variable is shadowing a Python builtin
  "A002",  # TODO: overriding builtins (might need noqa tags)
  "S320",  # TODO: Using `lxml` to parse untrusted data is known to be vulnerable to XML attacks
  "S324",  # TODO: Probable use of insecure hash functions in `hashlib`: `md5`
  "S311",  # TODO: Standard pseudo-random generators are not suitable for cryptographic purposes
  "S301",  # TODO: `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
  "S105",  # TODO: Possible hardcoded password assigned
  "S307",  # TODO: Use of possibly insecure function; consider using `ast.literal_eval`
  "PLE2502",  # TODO: Contains control characters that can permit obfuscated code
  "INP001",  # TODO: File is part of an implicit namespace package. Add an `__init__.py`.
  "TID252",  # TODO: Relative imports from parent modules are banned
  "D409",  # TODO: Section underline should match the length of its name
  "D206",  # CONFIG: formatter
  'ISC001',  # CONFIG: formatter
  'Q000',  # CONFIG: formatter
  'Q001',  # CONFIG: formatter
  'Q002',  # CONFIG: formatter
  'Q003',  # CONFIG: formatter
  'W191',  # CONFIG: formatter
  "E265",  # TODO: Block comment should start with `# `
  "E262",  # TODO: Inline comment should start with `# `
  "E266",  # TODO: Too many leading `#` before block comment
  "A005",  # TODO: Module `statistics` is shadowing a Python builtin module
  "PLC0415",  # TODO: `import` should be at the top-level of a file
  "PLW1514",  # TODO: `open` in text mode without explicit `encoding` argument
  "PLW1641",  # TODO: Object does not implement `__hash__` method
  "PLR0914",  # TODO: Too many local variables (16/15)
  "PLR1702",  # TODO: Too many nested blocks (8 > 5)
  "PLR0917",  # TODO: Too many positional arguments (7/5)
  "PLR0904",  # TODO: Too many public methods (21 > 20)
  "PLR6301",  # TODO: Method `entry` could be a function, class method, or static method
  "FURB103",  # TODO: `open` and `write` should be replaced by `Path(outputfile.name).write_bytes(outputmo)`
  "FURB101",  # TODO: `open` and `read` should be replaced by `Path(file_).read_bytes()`
  "PLR0916",  # TODO: Too many Boolean expressions (6 > 5)
  "CPY001",  # TODO: Missing copyright notice at top of file
  "F841",  # TODO: Local variable `args` is assigned to but never used
  "B909",  # X-TODO: Mutation to loop iterable `inputpo.units` during iteration
  "UP031",  # X-TODO: Use format specifiers instead of percent format
  "DOC",  # TODO: is not documented in docstring
  "PTH"  # TODO: Not using pathlib for now
]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["T201", "PLC1901"]
"translate/misc/progressbar.py" = ["T201"]
"translate/storage/benchmark.py" = ["T201"]
"translate/storage/placeables/strelem.py" = ["T201"]
"translate/tools/**.py" = ["T201"]
