[metadata]
name = translate-toolkit
version = attr:translate.__version__.sver
description = Tools and API for translation and localization engineering.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://toolkit.translatehouse.org/
author = Translate
author_email = translate-devel@lists.sourceforge.net
license = GPL-2.0-or-later
license_files = COPYING
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Software Development :: Libraries :: Python Modules
download_url = https://github.com/translate/translate/releases/
keywords = i18n l10n gettext translate
project_urls =
    Issue Tracker=https://github.com/translate/translate/issues
    Documentation=https://docs.translatehouse.org/projects/translate-toolkit/
    Source Code=https://github.com/translate/translate

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = 1
zip_safe = 0
scripts =
    tools/mozilla/build_firefox.sh
    tools/mozilla/buildxpi.py
    tools/mozilla/get_moz_enUS.py
    tools/pocommentclean
    tools/pocompendium
    tools/pomigrate2
    tools/popuretext
    tools/poreencode
    tools/posplit

[options.packages.find]
include =
    translate*


[options.entry_points]
# Generated using:
# find translate/{tools,services,filters,convert} -name '*.py' -executable |sort | tr / .| sed 's/\(.*\.\([^.]*\)\)\.py/        \2 = \1:main/'
console_scripts =
        csv2po = translate.convert.csv2po:main
        csv2tbx = translate.convert.csv2tbx:main
        dtd2po = translate.convert.dtd2po:main
        flatxml2po = translate.convert.flatxml2po:main
        html2po = translate.convert.html2po:main
        ical2po = translate.convert.ical2po:main
        idml2po = translate.convert.idml2po:main
        ini2po = translate.convert.ini2po:main
        json2po = translate.convert.json2po:main
        junitmsgfmt = translate.tools.junitmsgfmt:main
        mozfunny2prop = translate.convert.mozfunny2prop:main
        mozlang2po = translate.convert.mozlang2po:main
        moz2po = translate.convert.moz2po:main
        odf2xliff = translate.convert.odf2xliff:main
        oo2po = translate.convert.oo2po:main
        oo2xliff = translate.convert.oo2xliff:main
        php2po = translate.convert.php2po:main
        pot2po = translate.convert.pot2po:main
        po2csv = translate.convert.po2csv:main
        po2dtd = translate.convert.po2dtd:main
        po2flatxml = translate.convert.po2flatxml:main
        po2html = translate.convert.po2html:main
        po2ical = translate.convert.po2ical:main
        po2idml = translate.convert.po2idml:main
        po2ini = translate.convert.po2ini:main
        po2json = translate.convert.po2json:main
        po2mozlang = translate.convert.po2mozlang:main
        po2moz = translate.convert.po2moz:main
        po2oo = translate.convert.po2oo:main
        po2php = translate.convert.po2php:main
        po2prop = translate.convert.po2prop:main
        po2rc = translate.convert.po2rc:main
        po2resx = translate.convert.po2resx:main
        po2sub = translate.convert.po2sub:main
        po2symb = translate.convert.po2symb:main
        po2tiki = translate.convert.po2tiki:main
        po2tmx = translate.convert.po2tmx:main
        po2ts = translate.convert.po2ts:main
        po2txt = translate.convert.po2txt:main
        po2web2py = translate.convert.po2web2py:main
        po2wordfast = translate.convert.po2wordfast:main
        po2xliff = translate.convert.po2xliff:main
        po2yaml = translate.convert.po2yaml:main
        prop2mozfunny = translate.convert.prop2mozfunny:main
        prop2po = translate.convert.prop2po:main
        rc2po = translate.convert.rc2po:main
        resx2po = translate.convert.resx2po:main
        sub2po = translate.convert.sub2po:main
        symb2po = translate.convert.symb2po:main
        tbx2po = translate.convert.tbx2po:main
        tiki2po = translate.convert.tiki2po:main
        ts2po = translate.convert.ts2po:main
        txt2po = translate.convert.txt2po:main
        web2py2po = translate.convert.web2py2po:main
        xliff2odf = translate.convert.xliff2odf:main
        xliff2oo = translate.convert.xliff2oo:main
        xliff2po = translate.convert.xliff2po:main
        yaml2po = translate.convert.yaml2po:main
        pofilter = translate.filters.pofilter:main
        tmserver = translate.services.tmserver:main
        build_tmdb = translate.tools.build_tmdb:main
        phppo2pypo = translate.tools.phppo2pypo:main
        poclean = translate.tools.poclean:main
        pocompile = translate.tools.pocompile:main
        poconflicts = translate.tools.poconflicts:main
        pocount = translate.tools.pocount:main
        podebug = translate.tools.podebug:main
        pogrep = translate.tools.pogrep:main
        pomerge = translate.tools.pomerge:main
        porestructure = translate.tools.porestructure:main
        posegment = translate.tools.posegment:main
        poswap = translate.tools.poswap:main
        poterminology = translate.tools.poterminology:main
        pretranslate = translate.tools.pretranslate:main
        pydiff = translate.tools.pydiff:main
        pypo2phppo = translate.tools.pypo2phppo:main

[pydocstyle]
inherit=false
# Ignore all preselected error codes
select=
# Known error codes
# https://pydocstyle.readthedocs.io/en/latest/error_codes.html
#
# Descriptions of default ON error codes
# D201 - No blank lines allowed before function docstring
# D204 - 1 blank line required after class docstring
# D206 - Docstring should be indented with spaces, not tabs
# D207 - Docstring is under-indented
# D208 - Docstring is over-indented
# D209 - Multi-line docstring closing quotes should be on a separate line
# D210 - No whitespaces allowed surrounding docstring text
# D211 - No blank lines allowed before class docstring
# D300 - Use """triple double quotes"""
#
# Default OFF
# D202 - No blank lines allowed after function docstring (found 1)
#   - not convinced that this improves readability
# D203 - 1 blank line required before class docstring
#   - incompatible with D211
#
# Temporary OFF - needs more time to fix
# D301 - Use r""" if any backslashes in a docstring
add-select=D201,D204,D206,D207,D208,D209,D210,D211,D300
# If we need to exlude tests uncomment this
match-dir=(?!build).*

[pycodestyle]
max-line-length=84
# .svn,CVS,.bzr,.hg,.git,__pycache__ - restore defaults
# migrations - autogenerated, so we don't really want to edit them
# docs/conf.py - mostly supplied by Sphinx
# _build - documentation build directory
# .tox - exclude any tox installed files
# pootle/static - js, CSS and images
# pootle/translations - project translations
# pootle/locale - Pootle UI translations
# pootle/assets - built static files
# templates - HTML templates
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,conf.py,_build,.tox,selector.py,mozilla-l10n,build,env,build,dist
# E129 visually indented line with same indent as next logical line
#   - No real agreement here.  Best to disable it for now
# E226 missing whitespace around arithmetic operator
#   - This makes split[a+1:b+1] look unreadble as split[a + 1:b + 1]
# E402 module level import not at top of file
#   - There are enough cases where we want to import in a function
# W503 line break before binary operator
#   - Jury is out on what is actualy more readable
# E731 do not assign a lambda expression, use a def
#   - Not sure this is really correct, till then its off
# Future cleanups, temporary disabled
# E501 line length
#   - Way too much noise
# E265 block comment should start with '# '
# E266 too many leading '#' for block comment
#   - Way too much noise, likely commented out code
#   - Not something to cleanup just yet
# E741 ambiguous variable name
#   - Require some thought to cleanup
# Default ignore list for ref E121,E123,E126,E226,E24,E704
ignore=E203,E129,E226,E402,E731,W503,E501,E265,E266,E741,W504,W605
statistics=True

[flake8]
# See [pycodestyle] above, [pycodestyle] is the reference, please keep in sync.
# You would think flake8 would have the decency of reading the pycodestyle
# configs, but it doesn't so we have to repeat them.
max-line-length=84
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,conf.py,_build,.tox,selector.py,mozilla-l10n,build,env,build,dist
# Additional default excludes:
# N - naming plugin
#  E203 - see https://github.com/psf/black/issues/315
ignore=E203,E129,E226,E402,E731,W503,N,E265,E501,E266,E741,W504
# /end [pycodestyle] duplication
statistics=True
per-file-ignores =
  translate/storage/placeables/__init__.py:F401,F403
  translate/storage/po.py:F401,F403
  translate/storage/wordfast.py:E262
